# typetex

./: .prettierignore  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: TitleBar.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
