[package]
name = "typetex"
version = "0.1.0"
description = "A modern, beginner-friendly LaTeX editor."
authors = ["Nguyen The Viet <https://github.com/duchiru>"]
repository = "https://github.com/duchiru/typetex"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

